test/files/neg/t0764.check
t0764.scala:13: error: type mismatch;
 found   : java.lang.Object with Node{type T = _1.type} where val _1: Node{type T = NextType}
 required: Node{type T = Main.this.AType}
	new Main[AType]( (value: AType).prepend )
                                        ^
one error found
